jsonschemadsl2ecore.trafo.opt/test/test104/validtests/example8.test104
{
	"ale":{
		"runs-on":1,
		"bar":true
	},
	"prop1":"abcdefghilmn"	
} 