jsonschemadsl2ecore.trafo.opt/test/test104/invalidtests/example14.test104
{
	"ale":{
		"runs-on":1,
		"bar":true
	},
	"prop1":"abcdefghilmn"	,
	"prop2":13,
	"prop3":true
} 